@@ -54,6 +54,8 @@ Library
 Extension Modules
 -----------------
 
+- Bug #1703286: ctypes no longer truncates 64-bit pointers.
+
 - Bug #1721309: prevent bsddb module from freeing random memory.
 
 - Bug #1726026: Correct the field names of WIN32_FIND_DATAA and
